--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,22 @@
-  body {
-    display: flex;
-    flex-direction: column;
+.container {
+  max-width: 960px;
+}
+
+.pricing-header {
+  max-width: 700px;
+}
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
   }
+}
   
-  @media (min-width: 320px) and (max-width: 480px) {
-    body {
-        width: 100%;
-    }
-    
-  }
